Configured appsettings.Development.json to give the connection string rather than appsettings.json so it is agnostic to the machine running it

--- a/TodoApi/appsettings.Development.json
+++ b/TodoApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-B7OIC2E\\SQLEXPRESS01;Database=TodoDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
