--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=BrettXPS\\SQLEXPRESS;Database=TodoDB;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=BrettXPS\\SQLEXPRESS;Database=TodoDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
