--- a/TodoApi/appsettings.Development.json
+++ b/TodoApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-B7OIC2E\\SQLEXPRESS01;Database=TodoDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=BrettXPS\\SQLEXPRESS;Database=TodoDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
