--- a/TodoGui/TodoGui.csproj
+++ b/TodoGui/TodoGui.csproj
@@ -9,6 +9,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.3.3" />
     <PackageReference Include="BootstrapBlazor" Version="9.0.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
   </ItemGroup>
